# module-2_homework-6

./: connection.py  create_tables.py  fill_data.py  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  tables.sql
db/: postmaster.pid
db/base/5/: 1247  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  2224  2224_vm  2579  2604  2604_fsm  2604_vm  2606  2606_fsm  2606_vm  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2619  2619_fsm  2619_vm  2620  2620_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+35 more)
db/global/: 1260  pg_control  pg_internal.init
db/pg_xact/: 0000
